// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AppMenu > snapshot: defaultOpen prop 1`] = `
<div
  class="ucl-app-menu css-it216d"
  data-testid="ucl-app-menu"
>
  <button
    aria-controls="app-menu"
    aria-expanded="true"
    aria-haspopup="true"
    aria-label="Menu button"
    class="ucl-icon-button ucl-app-menu__trigger css-mgnm3l"
    data-testid="ucl-app-menu__trigger"
    id="app-menu-button"
    tabindex="0"
  >
    <svg
      class="ucl-icon css-148hpxb"
      data-testid="ucl-icon"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <line
        x1="3"
        x2="21"
        y1="12"
        y2="12"
      />
      <line
        x1="3"
        x2="21"
        y1="6"
        y2="6"
      />
      <line
        x1="3"
        x2="21"
        y1="18"
        y2="18"
      />
    </svg>
  </button>
  <ul
    aria-labelledby="app-menu-button"
    class="ucl-app-menu__content css-63xuy3"
    data-testid="ucl-app-menu__content"
    id="app-menu"
    role="menu"
    tabindex="-1"
  >
    <li
      aria-disabled="false"
      aria-label="Go Back"
      class="ucl-app-menu__item css-8z8u2q"
      data-testid="ucl-app-menu__item"
      role="menuitem"
      tabindex="0"
    >
      <span
        class="css-1epmcqg"
      >
        <svg
          class="ucl-icon css-148hpxb"
          data-testid="ucl-icon"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <polyline
            points="15 18 9 12 15 6"
          />
        </svg>
      </span>
      Back
    </li>
    <li
      aria-disabled="true"
      class="ucl-app-menu__item css-vobysi"
      data-testid="ucl-app-menu__item"
      role="menuitem"
      tabindex="-1"
    >
      Menu Item 1
    </li>
    <hr
      class="ucl-app-menu__divider css-wwimuq"
      data-testid="ucl-app-menu__divider"
    />
    <li
      aria-disabled="true"
      class="ucl-app-menu__item css-vobysi"
      data-testid="ucl-app-menu__item"
      role="menuitem"
      tabindex="-1"
    >
      Menu Item 2
    </li>
  </ul>
</div>
`;

exports[`AppMenu > snapshot: no props 1`] = `
<div
  class="ucl-app-menu css-it216d"
  data-testid="ucl-app-menu"
/>
`;

exports[`AppMenu > snapshot: testId prop 1`] = `
<div
  class="ucl-app-menu css-it216d"
  data-testid="test1"
/>
`;
